Atualização do Repository do Usuário.
Ainda é necessário alterações no Service e Controller por conta do UsuarioRepository atual.